soup_cookies_from_request: fix to not always g_warn

https://bugzilla.gnome.org/show_bug.cgi?id=602389